Added views orders_page, order_detail, delete_order and payment.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,7 @@
 </head>
 <body>
 <h1>Главная страница</h1>
-
-<a href="{% url 'cars_list' %}">Список всех машин</a>
-
+<a href="{% url 'cars_list' %}">Магазин машин</a>
+<a href="{% url 'orders_page' %}">Заказы</a>
 </body>
 </html>
