Added bootstrap and basic template.

--- a/templates/cars_list.html
+++ b/templates/cars_list.html
@@ -1,18 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Список машин</title>
-</head>
-<body>
-    <h1>Список доступных машин</h1>
-    <h3>Выберете клиента и количество машин для заказа</h3>
-    <form method="post" action="{% url 'cars_list' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Добавить в корзину</button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Список машин{% endblock %}
+
+{% block content %}
+    {% load bootstrap5 %}
+
+    <h4>Выберете клиента и количество машин для заказа</h4>
+    <div class="container custom-container">
+        <div class="row justify-content-start">
+            <div class="col-md-auto">
+                <form method="post" action="{% url 'cars_list' %}" class="mb-3">
+                    {% csrf_token %}
+                    {% bootstrap_form form %}
+                    {% buttons %}
+                        <button type="submit" class="btn btn-primary">Добавить в корзину</button>
+                    {% endbuttons %}
+                </form>
+                {% if result %}
+                    <div class="alert alert-success mt-3" role="alert">
+                        {{ result }} <br>
+                        {{ message }}
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
