--- a/templates/orders_page.html
+++ b/templates/orders_page.html
@@ -1,45 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Заказ оформлен</title>
-    <style>
-        a {
-            display: block;
-            margin-bottom: 10px;
-            text-decoration: none;
-        }
-    </style>
-    <style>
-        table {
-            width: 30%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
+{% extends "base.html" %}
 
-        table, th, td {
-            border: 1px solid #ccc;
-        }
+{% block title %}Заказ оформлен{% endblock %}
 
-        th, td {
-            padding: 8px 12px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
-<h2>Заказы</h2>
-<a href="{% url 'home' %}">Главная страница</a>
+{% block content %}
+    <h2>Заказы</h2>
     {% if list_orders %}
-     <table>
+        <table class="base-table table-style-2">
         <tr>
             <th style="width: 10%;">Номер заказа</th>
             <th style="width: 10%;">Клиент</th>
@@ -56,5 +22,4 @@
 {% else %}
     <p>В корзине нет заказов.</p>
 {% endif %}
-</body>
-</html>
+{% endblock %}
