--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,9 @@
-<!doctype html>
-<html lang="ru-RU">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Главная страница</title>
-    <style>
-        a {
-            display: block;
-            margin-bottom: 10px;
-            text-decoration: none;
-        }
-    </style>
-</head>
-<body>
-<h1>Главная страница</h1>
+{% extends "base.html" %}
+
+{% block title %}Главная страница{% endblock %}
+
+{% block content %}
+    <h1>Главная страница</h1>
 <a href="{% url 'cars_list' %}">Магазин машин</a>
 <a href="{% url 'orders_page' %}">Заказы</a>
-</body>
-</html>
+{% endblock %}
