--- a/templates/order_detail.html
+++ b/templates/order_detail.html
@@ -1,39 +1,10 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Детали заказа</title>
-    <style>
-        table {
-            width: 60%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
+{% extends "base.html" %}
 
-        table, th, td {
-            border: 1px solid #ccc;
-        }
+{% block title %}Детали заказа{% endblock %}
 
-        th, td {
-            padding: 8px 12px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
+{% block content %}
+    {% load bootstrap5 %}
     <h2>Детали заказа №{{ order.id }}</h2>
-    <a href="{% url 'orders_page' %}">Вернуться к заказам</a>
-    <br>
     <p>Информация о заказе:</p>
     <ul>
         <li><strong>Номер заказа:</strong> {{ order.id }}</li>
@@ -43,7 +14,7 @@
 
     {% if cars %}
         <h3>Автомобили в заказе:</h3>
-        <table>
+        <table class="base-table table-style-1">
             <tr>
                 <th style="width: 20%;">Марка</th>
                 <th style="width: 20%;">Модель</th>
@@ -62,12 +33,13 @@
             {% endfor %}
         </table>
         <p><strong>Общая стоимость машин:</strong> {{ total_price }}</p>
-        <form method="post" action="{% url 'order_detail' order.id %}">
+        <form method="post" action="{% url 'order_detail' order.id %}" class="mb-3">
             {% csrf_token %}
-            <button type="submit">Оплатить</button>
+            {% buttons %}
+                <button type="submit" class="btn btn-primary">Оплатить</button>
+            {% endbuttons %}
         </form>
     {% else %}
         <p>В заказе нет автомобилей.</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
