The add cars view has been created.

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,9 +73,9 @@
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="{% url 'home' %}" class="nav-link px-2 text-secondary">Домой</a></li>
-                <li><a href="{% url 'cars_list' %}" class="nav-link px-2 text-white">Магазин</a>
-                </li>
+                <li><a href="{% url 'cars_list' %}" class="nav-link px-2 text-white">Магазин</a></li>
                 <li><a href="{% url 'orders_page' %}" class="nav-link px-2 text-white">Заказы</a></li>
+                <li><a href="{% url 'create_cars' %}" class="nav-link px-2 text-white">Добавить машины</a></li>
             </ul>
         </div>
     </div>
