--- a/templates/index.html
+++ b/templates/index.html
@@ -6,4 +6,6 @@
     <h1>Главная страница</h1>
 <a href="{% url 'cars_list' %}">Магазин машин</a>
 <a href="{% url 'orders_page' %}">Заказы</a>
+<a href="{% url 'create_cars' %}">Добавление машин в БД</a>
+
 {% endblock %}
