--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,18 @@
         .table-style-3 {
             width: 25%;
         }
+
+        .form-label {
+            display: inline-block;
+            min-width: 150px;
+            vertical-align: top;
+        }
+
+        .form-error ul {
+            list-style: none;
+            padding: 0;
+            color: #CC0000;
+        }
     </style>
 
 </head>
