--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,38 +1,44 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <div class="form-content my-3 p-3">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
+                        <div class="card-header justify-content-center">
+                            <div id="error_div"></div>
+                            <h3 class="font-weight-light my-4 text-center">Авторизация</h3>
+                        </div>
+                            {% if form.errors %}
+                                <p>Your username and password didn't match. Please try again.</p>
+                            {% endif %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+                            {% if next %}
+                                {% if user.is_authenticated %}
+                                <p>Your account doesn't have access to this page. To proceed,
+                                please login with an account that has access.</p>
+                                {% else %}
+                                <p>Please login to see this page.</p>
+                                {% endif %}
+                            {% endif %}
+                        <div class="card-body">
+                            <form method="post" action="{% url 'login' %}">
+                            {% csrf_token %}
+                                <p><label class="form-label">{{ form.username.label_tag }} </label>{{ form.username }}</p>
+                                <p><label class="form-label">{{ form.password.label_tag }} </label>{{ form.password }}</p>
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+                                <button type="submit" class="col-md-12 btn btn-dark">Войти</button>
+                                <input type="hidden" name="next" value="{{ next }}">
+                            </form>
 
-<input type="submit" value="login">
-<input type="hidden" name="next" value="{{ next }}">
-</form>
 
-{# Assumes you set up the password_reset view in your URLconf #}
-{#<p><a href="{% url 'password_reset' %}">Lost password?</a></p>#}
-
+                            <p><a href="{% url 'password_reset' %}">Забыли пароль?</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
