--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -3,14 +3,30 @@
 {% load static %}
 
 {% block content %}
-
-    <div class="container">
-    <h3>Регистрация пользователя</h3>
-        <form method="post" action="">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Зарегистрироваться">
-        </form>
+    <div class="form-content my-3 p-3">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
+                        <div class="card-header justify-content-center">
+                            <div id="error_div"></div>
+                            <h3 class="font-weight-light my-4 text-center">Регистрация пользователя</h3>
+                        </div>
+                        <div class="card-body">
+                            <form method="post">
+                                {% csrf_token %}
+                                {% for f in form %}
+                                    <p><label class="form-label"
+                                              for="{{ f.id_for_label }}">{{ f.label }}: </label>{{ f }}</p>
+                                    <div class="form-error">{{ f.errors }}</div>
+                                {% endfor %}
+                                <button type="submit" class="col-md-12 btn btn-dark">Зарегистрироваться</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock content %}
