--- a/templates/base.html
+++ b/templates/base.html
@@ -94,6 +94,7 @@
                     {{ user.username }} &nbsp; &nbsp;
                     <a href="{% url 'logout' %}" class="btn btn-warning">Выйти</a>
                 {% else %}
+                    <a href="{% url 'google_login' %}" class="btn btn-info">Регистрация через гугл</a>
                     <a href="{% url 'register' %}" class="btn btn-info">Регистрация</a>
                     <a href="{% url 'login' %}" class="btn btn-outline-light me-2">Авторизация</a>
                 {% endif %}
