--- a/templates/create_cars.html
+++ b/templates/create_cars.html
@@ -8,7 +8,7 @@
     <div class="container custom-container">
         <div class="row justify-content-start">
             <div class="col-md-auto">
-                <form method="post" action="{% url 'create_cars' %}" class="mb-3">
+                <form method="post" enctype="multipart/form-data" action="{% url 'create_cars' %}" class="mb-3">
                     {% csrf_token %}
                     {% bootstrap_form form %}
                     {% buttons %}
