--- a/templates/create_photo.html
+++ b/templates/create_photo.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Photo</title>
+    <style>
+        img.img-article-left {
+            max-width: 300px;
+            height: auto;
+            float: left;
+            padding: 0 10px 10px 0;}
+    </style>
 </head>
 <body>
 <form action="" method="post" enctype="multipart/form-data">
@@ -12,7 +19,7 @@
 </form>
 {% if car_photo.image %}
     <p>{{ car_photo.name }}</p>
-    <img src="{{ car_photo.image.url }}">
+    <img class="img-article-left" src="{{ car_photo.image.url }}">
 {% endif %}
 </body>
 </html>
