--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,13 @@
             padding: 0;
             color: #CC0000;
         }
+
+        img.img-article-left {
+            max-width: 300px;
+            height: auto;
+            float: left;
+            padding: 0 10px 10px 0;
+        }
     </style>
 
 </head>
@@ -101,7 +108,9 @@
         </div>
     </div>
 </header>
+<div class="container">
+    {% block content %}{% endblock %}
+</div>
 
-{% block content %}{% endblock %}
 </body>
 </html>
