--- a/templates/basket.html
+++ b/templates/basket.html
@@ -4,48 +4,50 @@
 
 {% block content %}
     {% load bootstrap5 %}
-    {% if cars and order %}
-        <h2>Детали заказа №{{ order.id }}</h2>
-        <p>Информация о заказе:</p>
-        <ul>
-            <li><strong>Номер заказа:</strong> {{ order.id }}</li>
-            <li><strong>Клиент:</strong> {{ order.client }}</li>
-            <li><strong>Оплачено:</strong> {% if order.is_paid %}Да{% else %}Нет{% endif %}</li>
-        </ul>
+    <div class="container">
+        {% if cars and order %}
+            <h2>Детали заказа №{{ order.id }}</h2>
+            <p>Информация о заказе:</p>
+            <ul>
+                <li><strong>Номер заказа:</strong> {{ order.id }}</li>
+                <li><strong>Клиент:</strong> {{ order.client }}</li>
+                <li><strong>Оплачено:</strong> {% if order.is_paid %}Да{% else %}Нет{% endif %}</li>
+            </ul>
 
-        <h3>Автомобили в заказе:</h3>
-        <table class="base-table table-style-1">
-            <tr>
-                <th style="width: 20%;">Марка</th>
-                <th style="width: 20%;">Модель</th>
-                <th style="width: 15%;">Цвет</th>
-                <th style="width: 10%;">Год</th>
-                <th style="width: 15%;">Цена</th>
-            </tr>
-            {% for car in cars %}
+            <h3>Автомобили в заказе:</h3>
+            <table class="base-table table-style-1">
                 <tr>
-                    <td>{{ car.car_type.brand }}</td>
-                    <td>{{ car.car_type.name }}</td>
-                    <td>{{ car.color }}</td>
-                    <td>{{ car.year }}</td>
-                    <td>{{ car.car_type.price }}</td>
+                    <th style="width: 20%;">Марка</th>
+                    <th style="width: 20%;">Модель</th>
+                    <th style="width: 15%;">Цвет</th>
+                    <th style="width: 10%;">Год</th>
+                    <th style="width: 15%;">Цена</th>
                 </tr>
-            {% endfor %}
-        </table>
-        <p><strong>Общая стоимость машин:</strong> {{ total_price }}</p>
-        <div class="mb-3">
-            <form method="post" action="{% url 'basket' %}" style="display: inline;">
-                {% csrf_token %}
-                <input type="hidden" name="order_id" value="{{ order.id }}">
+                {% for car in cars %}
+                    <tr>
+                        <td>{{ car.car_type.brand }}</td>
+                        <td>{{ car.car_type.name }}</td>
+                        <td>{{ car.color }}</td>
+                        <td>{{ car.year }}</td>
+                        <td>{{ car.car_type.price }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+            <p><strong>Общая стоимость машин:</strong> {{ total_price }}</p>
+            <div class="mb-3">
+                <form method="post" action="{% url 'basket' %}" style="display: inline;">
+                    {% csrf_token %}
+                    <input type="hidden" name="order_id" value="{{ order.id }}">
                     <button type="submit" class="btn btn-primary">Оплатить</button>
-            </form>
-            <form method="post" action="{% url 'delete_order' order.id %}" style="display: inline;">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-danger">Удалить заказ</button>
-            </form>
-        </div>
+                </form>
+                <form method="post" action="{% url 'delete_order' order.id %}" style="display: inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">Удалить заказ</button>
+                </form>
+            </div>
 
-    {% else %}
-        <p>В вашей корзине нет заказов</p>
-    {% endif %}
+        {% else %}
+            <p>В вашей корзине нет заказов</p>
+        {% endif %}
+    </div>
 {% endblock %}
