--- a/templates/payment.html
+++ b/templates/payment.html
@@ -3,22 +3,24 @@
 {% block title %}Оплата заказа{% endblock %}
 
 {% block content %}
-    <h3>Заказ №{{ order_id }} оплачен</h3> <br>
-    <h5>Выданы регистрационные номера</h5>
-    {% if licenses %}
-        <table class="base-table table-style-3">
-            <tr>
-                <th style="width: 20%;">ID машины</th>
-                <th style="width: 40%;">Регистрационные номер</th>
-            </tr>
-            {% for licence in licenses %}
+    <div class="container">
+        <h3>Заказ №{{ order_id }} оплачен</h3> <br>
+        <h5>Выданы регистрационные номера</h5>
+        {% if licenses %}
+            <table class="base-table table-style-3">
                 <tr>
-                    <td>{{ licence.car.id }}</td>
-                    <td>{{ licence.number }}</td>
+                    <th style="width: 20%;">ID машины</th>
+                    <th style="width: 40%;">Регистрационные номер</th>
                 </tr>
-            {% endfor %}
-        </table>
-    {% else %}
-        <p>Нет лицензий для оплаты.</p>
-    {% endif %}
+                {% for licence in licenses %}
+                    <tr>
+                        <td>{{ licence.car.id }}</td>
+                        <td>{{ licence.number }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        {% else %}
+            <p>Нет лицензий для оплаты.</p>
+        {% endif %}
+    </div>
 {% endblock %}
