Fixed a bug with payments. Pictures are loaded 16:9. And work on cart design.

--- a/templates/basket.html
+++ b/templates/basket.html
@@ -47,7 +47,9 @@
             </div>
 
         {% else %}
-            <p>В вашей корзине нет заказов</p>
+            <div class="alert alert-info" role="alert">
+                В вашей корзине нет заказов
+            </div>
         {% endif %}
     </div>
 {% endblock %}
