--- a/templates/payment_state.html
+++ b/templates/payment_state.html
@@ -16,7 +16,7 @@
                         <div class="card mb-3">
                             <div class="card-body">
                                 <h5 class="card-title">Номер заказа: {{ ord.id }}</h5>
-                                <p class="card-text">Статус оплаты: {% if ord.is_paid %} Оплачено {% else %} Не оплачено {% endif %}</p>
+                                <p class="card-text">Статус покупки: {% if ord.is_paid %} Оплачено {% else %} Не оплачено {% endif %}</p>
                                 {% if not ord.is_paid %}
                                     <p class="card-text">Ссылка на оплату: <a href="{{ ord.invoice_url }}" class="btn btn-primary">Оплатить</a></p>
                                 {% endif %}
