--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                     <a href="{% url 'basket' %}" class="btn btn-success">Корзина</a>
                     <a href="{% url 'logout' %}" class="btn btn-warning">Выйти</a>
                 {% else %}
-                    <a href="{% url 'google_login' %}" class="btn btn-info">Войти</a>
+                    <a href="{% url 'account_login' %}" class="btn btn-info">Войти</a>
                 {% endif %}
             </div>
         </div>
