--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,36 +3,26 @@
 {% load i18n %}
 {% load allauth account socialaccount %}
 {% block head_title %}
-    {% trans "Sign In" %}
+    {% trans "Вход" %}
 {% endblock head_title %}
 
 {% block content %}
-    <div class="container" >
-    {% element h1 %}
-        {% trans "Sign In" %}
-    {% endelement %}
-    <p>
-        {% blocktrans %}If you have not created an account yet, then please
-            <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}
-    </p>
-    {% url 'account_login' as login_url %}
-    {% element form form=form method="post" action=login_url tags="entrance,login" %}
-        {% slot body %}
+    <div class="container text-center">
+        <h1>{% trans "Вход" %}</h1>
+        <p>
+            {% blocktrans %}Если у вас еще нет учетной записи, пожалуйста,
+                <a href="{{ signup_url }}">зарегистрируйтесь</a>{% endblocktrans %}
+        </p>
+        {% url 'account_login' as login_url %}
+        <form method="post" action="{% url 'account_login' %}" class="entrance login">
             {% csrf_token %}
-            {% element fields form=form unlabeled=True %}
-            {% endelement %}
+            {{ form.as_p }}
             {% if redirect_field_value %}
-                <input type="hidden"
-                       name="{{ redirect_field_name }}"
-                       value="{{ redirect_field_value }}"/>
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
             {% endif %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" tags="prominent,login" %}
-                {% trans "Sign In" %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
+            <button type="submit" class="prominent login btn-dark">{% trans "Вход" %}</button>
+        </form>
+        {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
     </div>
 {% endblock content %}
+{#Всё работает#}
