--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -2,29 +2,29 @@
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
-    {% trans "Sign In" %}
+    {% trans "Войти" %}
 {% endblock head_title %}
 {% block content %}
     {% if process == "connect" %}
         {% element h1 %}
-            {% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}
+            {% blocktrans with provider.name as provider %}Подключить {{ provider }}{% endblocktrans %}
         {% endelement %}
         <p>
-            {% blocktrans with provider.name as provider %}You are about to connect a new third-party account from {{ provider }}.{% endblocktrans %}
+            {% blocktrans with provider.name as provider %}Вы собираетесь подключить новый аккаунт от {{ provider }}.{% endblocktrans %}
         </p>
     {% else %}
         {% element h1 %}
-            {% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}
+            {% blocktrans with provider.name as provider %}Войти через {{ provider }}{% endblocktrans %}
         {% endelement %}
         <p>
-            {% blocktrans with provider.name as provider %}You are about to sign in using a third-party account from {{ provider }}.{% endblocktrans %}
+            {% blocktrans with provider.name as provider %}Вы собираетесь войти, используя аккаунт от {{ provider }}.{% endblocktrans %}
         </p>
     {% endif %}
     {% element form method="post" no_visible_fields=True %}
         {% slot actions %}
             {% csrf_token %}
             {% element button type="submit" %}
-                {% trans "Continue" %}
+                {% trans "Продолжить" %}
             {% endelement %}
         {% endslot %}
     {% endelement %}
