--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,22 +7,50 @@
 {% endblock head_title %}
 
 {% block content %}
-    <div class="container text-center">
-        <h1>{% trans "Вход" %}</h1>
-        <p>
-            {% blocktrans %}Если у вас еще нет учетной записи, пожалуйста,
-                <a href="{{ signup_url }}">зарегистрируйтесь</a>{% endblocktrans %}
-        </p>
-        {% url 'account_login' as login_url %}
-        <form method="post" action="{% url 'account_login' %}" class="entrance login">
-            {% csrf_token %}
-            {{ form.as_p }}
-            {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-            {% endif %}
-            <button type="submit" class="prominent login btn-dark">{% trans "Вход" %}</button>
-        </form>
-        {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
+    <div class="form-content my-3 p-3">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
+                        <div class="card-header justify-content-center">
+                            <div id="error_div"></div>
+                            <h3 class="font-weight-light my-4 text-center">{% trans "Вход" %}</h3>
+                        </div>
+                        {% if form.errors %}
+                            <p>{% trans "Your username and password didn't match. Please try again." %}</p>
+                        {% endif %}
+
+                        {% if next %}
+                            {% if user.is_authenticated %}
+                                <p>{% trans "Your account doesn't have access to this page. To proceed, please login with an account that has access." %}</p>
+                            {% else %}
+                                <p>{% trans "Please login to see this page." %}</p>
+                            {% endif %}
+                        {% endif %}
+                        <div class="card-body">
+                            <form method="post" action="{% url 'account_login' %}" class="entrance login">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                {% if redirect_field_value %}
+                                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                                {% endif %}
+                                <button type="submit" class="col-md-12 btn btn-dark">{% trans "Войти" %}</button>
+                            </form>
+                            <hr>
+                            <p>{% trans "Если у вас еще нет учетной записи, пожалуйста," %}
+                                <a href="{{ signup_url }}" class="col-md-12 btn btn-info">{% trans "Зарегистрируйтесь" %}</a>
+                            </p>
+                            
+                            {# Добавляем кнопку для входа через Google #}
+                            <a href="{% provider_login_url 'google' %}" class="col-md-12 btn btn-success">
+                                {% trans "Вход через Google" %}
+                            </a>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock content %}
 {#Всё работает#}
