The design for the login and registration pages has been completed.

--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
-    {% trans "Change Password" %}
+    {% trans "Verify Your Email Address" %}
 {% endblock head_title %}
 {% block content %}
     <div class="container">
@@ -11,11 +11,13 @@
                 <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
                     <div class="card-header justify-content-center">
                         {% element h1 %}
-                            {% trans "Change Password" %}
+                            {% trans "Verify Your Email Address" %}
                         {% endelement %}
                     </div>
                     <div class="card-body">
-                        <p>{% trans 'Your password is now changed.' %}</p>
+                        <p>
+                            {% blocktrans %}We have sent an email to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification email in your main inbox, check your spam folder. Please contact us if you do not receive the verification email within a few minutes.{% endblocktrans %}
+                        </p>
                     </div>
                 </div>
             </div>
