--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -4,27 +4,42 @@
     {% trans "Password Reset" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    <p>
-        {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-    </p>
-    {% url 'account_reset_password' as reset_url %}
-    {% element form form=form method="post" action=reset_url %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form %}
-            {% endelement %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans 'Reset My Password' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-5">
+                <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
+                    <div class="card-header justify-content-center">
+                        {% element h1 %}
+                            {% trans "Password Reset" %}
+                        {% endelement %}
+                    </div>
+                    <div class="card-body">
+                        {% if user.is_authenticated %}
+                            {% include "account/snippets/already_logged_in.html" %}
+                        {% endif %}
+                        <p>
+                            {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
+                        </p>
+                        {% url 'account_reset_password' as reset_url %}
+                        {% element form form=form method="post" action=reset_url %}
+                            {% slot body %}
+                                {% csrf_token %}
+                                {% element fields form=form %}
+                                {% endelement %}
+                            {% endslot %}
+                            {% slot actions %}
+    <div class="col-md-12">
+        <button type="submit" class="btn btn-dark">
+            {% trans 'Reset My Password' %}
+        </button>
+    </div>
+{% endslot %}
+                        {% endelement %}
+                        <p>{% blocktrans %}Please contact us if you have any trouble resetting your
+                            password.{% endblocktrans %}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
