--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -5,30 +5,44 @@
     {% trans "Change Password" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% if token_fail %}
-            {% trans "Bad Token" %}
-        {% else %}
-            {% trans "Change Password" %}
-        {% endif %}
-    {% endelement %}
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>
-            {% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
-        </p>
-    {% else %}
-        {% element form method="post" action=action_url %}
-            {% slot body %}
-                {% csrf_token %}
-                {% element fields form=form %}
-                {% endelement %}
-            {% endslot %}
-            {% slot actions %}
-                {% element button type="submit" name="action" %}
-                    {% trans 'Change Password' %}
-                {% endelement %}
-            {% endslot %}
-        {% endelement %}
-    {% endif %}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-5">
+                <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
+                    <div class="card-header justify-content-center">
+                        {% element h1 %}
+                            {% if token_fail %}
+                                {% trans "Bad Token" %}
+                            {% else %}
+                                {% trans "Change Password" %}
+                            {% endif %}
+                        {% endelement %}
+                    </div>
+                    <div class="card-body">
+                        {% if token_fail %}
+                            {% url 'account_reset_password' as passwd_reset_url %}
+                            <p>
+                                {% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
+                            </p>
+                        {% else %}
+                            {% element form method="post" action=action_url %}
+                                {% slot body %}
+                                    {% csrf_token %}
+                                    {% element fields form=form %}
+                                    {% endelement %}
+                                {% endslot %}
+                                {% slot actions %}
+                                    <div class="col-md-12">
+                                        <button type="submit" class="btn btn-dark">
+                                            {% trans 'Change Password' %}
+                                        </button>
+                                    </div>
+                                {% endslot %}
+                            {% endelement %}
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
