--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,31 +4,40 @@
     {% trans "Signup" %}
 {% endblock head_title %}
 {% block content %}
-    <div class="container" >
-    {% element h1 %}
-        {% trans "Sign Up" %}
-    {% endelement %}
-    <p>
-        {% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
-    </p>
-    {% url 'account_signup' as action_url %}
-    {% element form form=form method="post" action=action_url tags="entrance,signup" %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form unlabeled=True %}
-            {% endelement %}
-            {% if redirect_field_value %}
-                <input type="hidden"
-                       name="{{ redirect_field_name }}"
-                       value="{{ redirect_field_value }}" />
-            {% endif %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button tags="prominent,signup" type="submit" %}
-                {% trans "Sign Up" %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
+    <div class="form-content my-3 p-3">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
+                        <div class="card-header justify-content-center">
+                            {% element h1 %}
+                                {% trans "Sign Up" %}
+                            {% endelement %}
+                            <p>
+                                {% blocktrans %}У вас уже есть аккаунт? Тогда пожалуйста
+                                    <a href="{{ login_url }}">Войдите</a>{% endblocktrans %}
+                            </p>
+                            {% url 'account_signup' as action_url %}
+                        </div>
+                        <div class="card-body">
+                            {% element form form=form method="post" action=action_url tags="entrance,signup" %}
+                                {% slot body %}
+                                    {% csrf_token %}
+                                    {% for f in form %}
+                                    <p><label class="form-label"
+                                              for="{{ f.id_for_label }}">{{ f.label }}: </label>{{ f }}</p>
+                                    <div class="form-error">{{ f.errors }}</div>
+                                {% endfor %}
+                                {% endslot %}
+                                {% slot actions %}
+                                    <button type="submit" class="col-md-12 btn btn-dark">Зарегистрироваться</button>
+                                {% endslot %}
+                                {% endelement %}
+                            {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock content %}
