--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -1,31 +1,33 @@
-{% extends "socialaccount/base_entrance.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
     {% trans "Войти" %}
 {% endblock head_title %}
 {% block content %}
-    {% if process == "connect" %}
-        {% element h1 %}
-            {% blocktrans with provider.name as provider %}Подключить {{ provider }}{% endblocktrans %}
-        {% endelement %}
-        <p>
-            {% blocktrans with provider.name as provider %}Вы собираетесь подключить новый аккаунт от {{ provider }}.{% endblocktrans %}
-        </p>
-    {% else %}
-        {% element h1 %}
-            {% blocktrans with provider.name as provider %}Войти через {{ provider }}{% endblocktrans %}
-        {% endelement %}
-        <p>
-            {% blocktrans with provider.name as provider %}Вы собираетесь войти, используя аккаунт от {{ provider }}.{% endblocktrans %}
-        </p>
-    {% endif %}
-    {% element form method="post" no_visible_fields=True %}
-        {% slot actions %}
-            {% csrf_token %}
-            {% element button type="submit" %}
-                {% trans "Продолжить" %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-5">
+                <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
+                    <div class="card-header justify-content-center">
+                        {% if process == "connect" %}
+                            <h1>{% blocktrans with provider.name as provider %}Подключить
+                                {{ provider }}{% endblocktrans %}</h1>
+                            <p>{% blocktrans with provider.name as provider %}Вы собираетесь подключить новый аккаунт от
+                                {{ provider }}.{% endblocktrans %}</p>
+                        {% else %}
+                            <h1>{% blocktrans with provider.name as provider %}Войти через
+                                {{ provider }}{% endblocktrans %}</h1>
+                            <p>{% blocktrans with provider.name as provider %}Вы собираетесь войти, используя аккаунт от
+                                {{ provider }}.{% endblocktrans %}</p>
+                        {% endif %}
+                        <form method="post" class="text-center">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-dark">{% trans "Продолжить" %}</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
