--- a/templates/car_not_found.html
+++ b/templates/car_not_found.html
@@ -1,11 +1,11 @@
 <!-- car_not_found.html -->
 {% extends 'base.html' %}
 
-{% block title %}Машина не найдена{% endblock %}
+{% block title %}Car not found{% endblock %}
 
 {% block content %}
     <div class="container">
-        <h1>Ошибка</h1>
-        <p>Извините, машина не найдена.</p>
+        <h1>Error</h1>
+        <p>Sorry, car not found.</p>
     </div>
 {% endblock %}
