--- a/templates/payment_state.html
+++ b/templates/payment_state.html
@@ -1,24 +1,24 @@
 {% extends "base.html" %}
 
-{% block title %}Статус покупки товара{% endblock %}
+{% block title %}Purchase Status{% endblock %}
 {% block content %}
     {% load bootstrap5 %}
     <div class="container mt-4">
         {% if not order %}
             <div class="alert alert-info" role="alert">
-                Вы еще не делали покупок. Выберите себе товар для покупки.
+                You haven't made any purchases yet. Choose a product to buy.
             </div>
         {% else %}
             <div class="card">
                 <div class="card-body">
-                    <h2 class="card-title">Информация о заказах:</h2>
+                    <h2 class="card-title">Order Information:</h2>
                     {% for ord in order %}
                         <div class="card mb-3">
                             <div class="card-body">
-                                <h5 class="card-title"><a href="{% url 'payment_status_details' ord.id %}">Номер заказа: {{ ord.id }}</a></h5>
-                                <p class="card-text">Статус покупки: {% if ord.is_paid %} Оплачено {% else %} Не оплачено {% endif %}</p>
+                                <h5 class="card-title"><a href="{% url 'payment_status_details' ord.id %}">Order Number: {{ ord.id }}</a></h5>
+                                <p class="card-text">Purchase Status: {% if ord.is_paid %} Paid {% else %} Not Paid {% endif %}</p>
                                 {% if not ord.is_paid %}
-                                    <p class="card-text">Ссылка на оплату: <a href="{{ ord.invoice_url }}" class="btn btn-primary">Оплатить</a></p>
+                                    <p class="card-text">Payment Link: <a href="{{ ord.invoice_url }}" class="btn btn-primary">Pay</a></p>
                                 {% endif %}
                             </div>
                         </div>
@@ -28,3 +28,4 @@
         {% endif %}
     </div>
 {% endblock %}
+
