--- a/templates/car_detail.html
+++ b/templates/car_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}Car detail{% endblock %}
 
 {% block content %}
     <div class="container">
@@ -14,17 +15,17 @@
                     {{ car.car_type.brand }} {{ car.car_type.name }}
                 </h1>
 
-                <p class="mb-2">Цвет {{ car.color }}</p>
-                <p class="mb-2">Год {{ car.year }}</p>
-                <p class="mb-2">Цена: {{ car.car_type.price }}</p>
-                <p class="mb-2">Количество машин на складе: {{ cars_count }}</p>
+                <p class="mb-2">Color {{ car.color }}</p>
+                <p class="mb-2">Year {{ car.year }}</p>
+                <p class="mb-2">Price: {{ car.car_type.price }}</p>
+                <p class="mb-2">Number of cars in stock: {{ cars_count }}</p>
 
                 <form id="form_buying_product" action="{% url 'car_detail' car.id  %}" class="mb-3" method="post">
                     {% csrf_token %}
                     <div class="form-group" style="display: flex; align-items: center;">
                         <input type="number" class="form-control" name="number" id="number" style="margin-right: 10px; width: 30%;" min="1" max="{{ cars_count }}">
                         <button type="submit" id="submit_btn" class="btn btn-success btn-buy" data-car_id="{{ car.id }}" data-name="{{ car.car_type.name }}" data-price="{{ car.car_type.price }}">
-                            Купить
+                            Add to Cart
                         </button>
                     </div>
                 </form>
@@ -35,7 +36,7 @@
                         var carsCount = {{ cars_count }};
 
                         if (numberInput.value < 1 || numberInput.value > carsCount) {
-                            alert('Пожалуйста, введите правильное количество машин.');
+                            alert('Please enter the correct quantity of cars.');
                             event.preventDefault();
                         }
                     });
