--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,31 +1,31 @@
 {% extends "base.html" %}
 
-{% block title %}Корзина{% endblock %}
+{% block title %}Cart{% endblock %}
 
 {% block content %}
     {% load bootstrap5 %}
     <div class="container">
         {% if cars and order %}
-            <h2>Детали заказа №{{ order.id }}</h2>
-            <p>Информация о заказе:</p>
+            <h2>Order Details №{{ order.id }}</h2>
+            <p>Order Information:</p>
             <ul>
-                <li><strong>Номер заказа:</strong> {{ order.id }}</li>
-                <li><strong>Клиент:</strong> {% if user.first_name and user.last_name %}
+                <li><strong>Order Number:</strong> {{ order.id }}</li>
+                <li><strong>Client:</strong> {% if user.first_name and user.last_name %}
                                 {{ user.first_name }} {{ user.last_name }} &nbsp; &nbsp;
                             {% else %}
                                 {{ user.username }} &nbsp; &nbsp;
                             {% endif %}</li>
-                <li><strong>Оплачено:</strong> {% if order.is_paid %}Да{% else %}Нет{% endif %}</li>
+                <li><strong>Paid:</strong> {% if order.is_paid %}Yes{% else %}No{% endif %}</li>
             </ul>
 
-            <h3>Автомобили в заказе:</h3>
+            <h3>Cars in Order:</h3>
             <table class="base-table table-style-1">
                 <tr>
-                    <th style="width: 20%;">Марка</th>
-                    <th style="width: 20%;">Модель</th>
-                    <th style="width: 15%;">Цвет</th>
-                    <th style="width: 10%;">Год</th>
-                    <th style="width: 15%;">Цена</th>
+                    <th style="width: 20%;">Brand</th>
+                    <th style="width: 20%;">Model</th>
+                    <th style="width: 15%;">Color</th>
+                    <th style="width: 10%;">Year</th>
+                    <th style="width: 15%;">Price</th>
                 </tr>
                 {% for car in cars %}
                     <tr>
@@ -37,22 +37,22 @@
                     </tr>
                 {% endfor %}
             </table>
-            <p><strong>Общая стоимость машин:</strong> {{ total_price }}</p>
+            <p><strong>Total Cars Cost:</strong> {{ total_price }}</p>
             <div class="mb-3">
-                <form method="post" action="{% url 'basket' %}" style="display: inline;">
+                <form method="post" action="{% url 'cart' %}" style="display: inline;">
                     {% csrf_token %}
                     <input type="hidden" name="order_id" value="{{ order.id }}">
-                    <button type="submit" class="btn btn-primary">Оплатить</button>
+                    <button type="submit" class="btn btn-primary">Pay</button>
                 </form>
                 <form method="post" action="{% url 'delete_order' order.id %}" style="display: inline;">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-danger">Удалить заказ</button>
+                    <button type="submit" class="btn btn-danger">Delete Order</button>
                 </form>
             </div>
 
         {% else %}
             <div class="alert alert-info" role="alert">
-                В вашей корзине нет заказов
+                There are no orders in your cart
             </div>
         {% endif %}
     </div>
