--- a/templates/registration/mail.html
+++ b/templates/registration/mail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h6>Проверьте почту для подтверждения регистрации</h6>
+   <h6>{% trans "Check your email for registration confirmation" %}</h6>
 {% endblock content %}
