--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -8,7 +8,7 @@
                     {% if validlink %}
                         <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
                             <div class="card-header justify-content-center">
-                                <h3 class="font-weight-light my-4 text-center">Сбросить пароль</h3>
+                                <h3 class="font-weight-light my-4 text-center">c</h3>
                             </div>
                             {% if form.errors %}
                                 <div class="alert alert-danger alert-dismissible" role="alert">
@@ -29,7 +29,7 @@
                                     <div class="form-row">
                                         <div class="col-md-10 offset-md-1">
                                             <div class="form-group">
-                                                <label class="small mb-1" for="id_new_password1">Новый пароль</label>
+                                                <label class="small mb-1" for="id_new_password1">New password</label>
                                                 <input type="password" name="new_password1" autocomplete="new-password"
                                                        class="form-control" required id="id_new_password1"
                                                        placeholder="Enter password"/>
@@ -41,7 +41,7 @@
                                     <div class="form-row">
                                         <div class="col-md-10 offset-md-1">
                                             <div class="form-group">
-                                                <label class="small mb-1" for="id_new_password2">Подтверждение нового пароля</label>
+                                                <label class="small mb-1" for="id_new_password2">Confirm new password</label>
                                                 <input type="password" name="new_password2" autocomplete="new-password"
                                                        required id="id_new_password2" class="form-control"
                                                        placeholder="Confirm password"/>
@@ -51,7 +51,7 @@
                                     <div class="form-row">
                                         <div class="col-md-10 offset-md-1">
                                             <div class="form-group mt-0 mb-1">
-                                                <button type="submit" class="col-md-12 btn btn-dark" id="reset">Сбросить пароль
+                                                <button type="submit" class="col-md-12 btn btn-dark" id="reset">Reset Password
                                                 </button>
                                             </div>
                                         </div>
