--- a/templates/sell_cars.html
+++ b/templates/sell_cars.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 
-{% block title %}Создание машин{% endblock %}
+{% block title %}Sell a Car{% endblock %}
 
 {% block content %}
     {% load bootstrap5 %}
 
     <div class="container custom-container">
-        <h4>Выставить машину на продажу</h4>
-        <h6>Заполните все поля</h6>
+        <h4>List a Car for Sale</h4>
+        <h6>Please fill in all fields</h6>
         <div class="row justify-content-start">
             <div class="col-md-auto">
                 <form method="post" enctype="multipart/form-data" action="{% url 'sell_cars' %}" class="mb-3">
                     {% csrf_token %}
                     {% bootstrap_form form %}
                     {% buttons %}
-                        <button type="submit" class="btn btn-primary">Сохранить</button>
+                        <button type="submit" class="btn btn-primary">List for Sale</button>
                     {% endbuttons %}
                 </form>
                 {% if result %}
