--- a/templates/sell_cars/sell_car_delete.html
+++ b/templates/sell_cars/sell_car_delete.html
@@ -9,7 +9,7 @@
         <form method="post">
             {% csrf_token %}
             <button type="submit" class="btn btn-danger">Delete</button>
-            <a href="{% url 'my_listed_cars' %}" class="btn btn-secondary">Cancel</a>
+            <a href="{% url 'my_listed_cars' %}" class="btn btn-secondary margin-btm-0">Cancel</a>
         </form>
     </div>
 {% endblock %}
